// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavigationComponent snapshots should match snapshot with default state 1`] = `
<div
  class="bg-white"
  id="root6"
>
  
  <header
    class="relative bg-white"
  >
    <nav
      aria-label="Top"
      class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8"
    >
      <div
        class="border-b border-gray-200"
      >
        <div
          class="flex h-16 items-center"
        >
          <button
            class="relative rounded-md bg-white p-2 text-gray-400 lg:hidden"
            type="button"
          >
            <span
              class="absolute -inset-0.5"
            />
            <span
              class="sr-only"
            >
              Open menu
            </span>
            <svg
              aria-hidden="true"
              class="h-6 w-6"
              fill="none"
              stroke="currentColor"
              stroke-width="1.5"
              viewBox="0 0 24 24"
            >
              <path
                d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </button>
          <div
            class="ml-4 flex lg:ml-0 h-8 w-8 relative"
          >
            <a
              href="/"
              routerlink="/"
            >
              <span
                class="sr-only"
              >
                Demo Shop
              </span>
              <img
                alt="Demo shop logo"
                class="object-contain"
                fetchpriority="auto"
                fill=""
                loading="lazy"
                ng-img="true"
                ngsrc="icons/demo-shop.png"
                sizes="100vw"
                src="icons/demo-shop.png"
                style="position: absolute; width: 100%; height: 100%; inset: 0;"
              />
            </a>
          </div>
          <div
            class="hidden lg:ml-8 lg:block lg:self-stretch"
          >
            <div
              class="flex h-full space-x-8"
            >
              <div
                class="flex space-x-8"
              >
                <div
                  class="menu-item flex h-full"
                >
                  <div
                    class="relative flex"
                  >
                    <button
                      aria-expanded="false"
                      class="menu-item-button relative z-10 -mb-px flex items-center border-b-2 border-transparent pt-px text-sm font-medium text-gray-700 transition-colors duration-200 ease-out hover:text-gray-800"
                      routerlink="products"
                      tabindex="0"
                      type="button"
                    >
                       Flyout1 
                    </button>
                  </div>
                  
                </div>
                <div
                  class="menu-item flex h-full"
                >
                  <div
                    class="relative flex"
                  >
                    <button
                      aria-expanded="false"
                      class="menu-item-button relative z-10 -mb-px flex items-center border-b-2 border-transparent pt-px text-sm font-medium text-gray-700 transition-colors duration-200 ease-out hover:text-gray-800"
                      routerlink="products"
                      tabindex="0"
                      type="button"
                    >
                       Flyout2 
                    </button>
                  </div>
                  
                </div>
                
              </div>
              <div
                class="menu-item flex h-full space-x-8"
              >
                <a
                  class="menu-item-button flex items-center text-sm font-medium text-gray-700 hover:text-gray-800"
                  href="/route1"
                >
                   Route1 
                </a>
              </div>
              <div
                class="menu-item flex h-full space-x-8"
              >
                <a
                  class="menu-item-button flex items-center text-sm font-medium text-gray-700 hover:text-gray-800"
                  href="/route2"
                >
                   Route2 
                </a>
              </div>
              
            </div>
          </div>
          <div
            class="ml-auto flex items-center"
          >
            <lib-user-navigation
              class="hidden lg:flex lg:flex-1 lg:items-center lg:justify-end lg:space-x-6"
            />
            <lib-product-search />
            <lib-cart-icon />
          </div>
        </div>
      </div>
    </nav>
  </header>
</div>
`;

exports[`NavigationComponent snapshots should match snapshot with flyout menu open 1`] = `
<div
  class="bg-white"
  id="root8"
>
  
  <header
    class="relative bg-white"
  >
    <nav
      aria-label="Top"
      class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8"
    >
      <div
        class="border-b border-gray-200"
      >
        <div
          class="flex h-16 items-center"
        >
          <button
            class="relative rounded-md bg-white p-2 text-gray-400 lg:hidden"
            type="button"
          >
            <span
              class="absolute -inset-0.5"
            />
            <span
              class="sr-only"
            >
              Open menu
            </span>
            <svg
              aria-hidden="true"
              class="h-6 w-6"
              fill="none"
              stroke="currentColor"
              stroke-width="1.5"
              viewBox="0 0 24 24"
            >
              <path
                d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </button>
          <div
            class="ml-4 flex lg:ml-0 h-8 w-8 relative"
          >
            <a
              href="/"
              routerlink="/"
            >
              <span
                class="sr-only"
              >
                Demo Shop
              </span>
              <img
                alt="Demo shop logo"
                class="object-contain"
                fetchpriority="auto"
                fill=""
                loading="lazy"
                ng-img="true"
                ngsrc="icons/demo-shop.png"
                sizes="100vw"
                src="icons/demo-shop.png"
                style="position: absolute; width: 100%; height: 100%; inset: 0;"
              />
            </a>
          </div>
          <div
            class="hidden lg:ml-8 lg:block lg:self-stretch"
          >
            <div
              class="flex h-full space-x-8"
            >
              <div
                class="flex space-x-8"
              >
                <div
                  class="menu-item flex h-full"
                >
                  <div
                    class="relative flex"
                  >
                    <button
                      aria-expanded="false"
                      class="menu-item-button relative z-10 -mb-px flex items-center border-b-2 border-transparent pt-px text-sm font-medium text-gray-700 transition-colors duration-200 ease-out hover:text-gray-800"
                      routerlink="products"
                      tabindex="0"
                      type="button"
                    >
                       Flyout1 
                    </button>
                  </div>
                  <div
                    class="flyout-menu absolute inset-x-0 top-full text-sm text-gray-500 ng-trigger ng-trigger-animateFlyoutMenu ng-animating"
                  >
                    <div
                      aria-hidden="true"
                      class="absolute inset-0 top-1/2 bg-white shadow"
                    />
                    <div
                      class="relative bg-white"
                    >
                      <div
                        class="mx-auto max-w-7xl px-8"
                      >
                        <div
                          class="grid grid-cols-2 gap-x-8 gap-y-10 py-16"
                        >
                          <div
                            class="col-start-2 grid grid-cols-2 gap-x-8"
                          >
                            <div
                              class="group relative text-base sm:text-sm"
                            >
                              <div
                                class="aspect-h-1 aspect-w-1 overflow-hidden rounded-lg bg-gray-100 group-hover:opacity-75"
                              >
                                <lib-image-placeholder
                                  text="N"
                                />
                              </div>
                              <a
                                class="mt-6 block font-medium text-gray-900"
                              >
                                <span
                                  aria-hidden="true"
                                  class="absolute inset-0 z-10"
                                />
                                 New Items 
                              </a>
                              <p
                                aria-hidden="true"
                                class="mt-1"
                              >
                                Shop now
                              </p>
                            </div>
                            <div
                              class="group relative text-base sm:text-sm"
                            >
                              <div
                                class="aspect-h-1 aspect-w-1 overflow-hidden rounded-lg bg-gray-100 group-hover:opacity-75"
                              >
                                <lib-image-placeholder
                                  text="D"
                                />
                              </div>
                              <a
                                class="mt-6 block font-medium text-gray-900"
                              >
                                <span
                                  aria-hidden="true"
                                  class="absolute inset-0 z-10"
                                />
                                 Deals 
                              </a>
                              <p
                                aria-hidden="true"
                                class="mt-1"
                              >
                                Shop now
                              </p>
                            </div>
                          </div>
                          <div
                            class="row-start-1 grid grid-cols-3 gap-x-8 gap-y-10 text-sm"
                          >
                            <div>
                              <p
                                class="font-medium text-gray-900"
                                id="Flyout1-heading"
                              >
                                 Flyout1 
                              </p>
                              <ul
                                aria-labelledby="Flyout1-heading"
                                class="mt-6 space-y-6 sm:mt-4 sm:space-y-4"
                                role="list"
                              >
                                <li
                                  class="flex"
                                  style=""
                                >
                                  <a
                                    class="hover:text-gray-800 cursor-pointer"
                                  >
                                    Sub1
                                  </a>
                                </li>
                                
                              </ul>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  
                </div>
                <div
                  class="menu-item flex h-full"
                >
                  <div
                    class="relative flex"
                  >
                    <button
                      aria-expanded="false"
                      class="menu-item-button relative z-10 -mb-px flex items-center border-b-2 border-transparent pt-px text-sm font-medium text-gray-700 transition-colors duration-200 ease-out hover:text-gray-800"
                      routerlink="products"
                      tabindex="0"
                      type="button"
                    >
                       Flyout2 
                    </button>
                  </div>
                  <div
                    class="flyout-menu absolute inset-x-0 top-full text-sm text-gray-500 ng-trigger ng-trigger-animateFlyoutMenu ng-animating"
                  >
                    <div
                      aria-hidden="true"
                      class="absolute inset-0 top-1/2 bg-white shadow"
                    />
                    <div
                      class="relative bg-white"
                    >
                      <div
                        class="mx-auto max-w-7xl px-8"
                      >
                        <div
                          class="grid grid-cols-2 gap-x-8 gap-y-10 py-16"
                        >
                          <div
                            class="col-start-2 grid grid-cols-2 gap-x-8"
                          >
                            <div
                              class="group relative text-base sm:text-sm"
                            >
                              <div
                                class="aspect-h-1 aspect-w-1 overflow-hidden rounded-lg bg-gray-100 group-hover:opacity-75"
                              >
                                <lib-image-placeholder
                                  text="N"
                                />
                              </div>
                              <a
                                class="mt-6 block font-medium text-gray-900"
                              >
                                <span
                                  aria-hidden="true"
                                  class="absolute inset-0 z-10"
                                />
                                 New Items 
                              </a>
                              <p
                                aria-hidden="true"
                                class="mt-1"
                              >
                                Shop now
                              </p>
                            </div>
                            <div
                              class="group relative text-base sm:text-sm"
                            >
                              <div
                                class="aspect-h-1 aspect-w-1 overflow-hidden rounded-lg bg-gray-100 group-hover:opacity-75"
                              >
                                <lib-image-placeholder
                                  text="D"
                                />
                              </div>
                              <a
                                class="mt-6 block font-medium text-gray-900"
                              >
                                <span
                                  aria-hidden="true"
                                  class="absolute inset-0 z-10"
                                />
                                 Deals 
                              </a>
                              <p
                                aria-hidden="true"
                                class="mt-1"
                              >
                                Shop now
                              </p>
                            </div>
                          </div>
                          <div
                            class="row-start-1 grid grid-cols-3 gap-x-8 gap-y-10 text-sm"
                          >
                            <div>
                              <p
                                class="font-medium text-gray-900"
                                id="Flyout2-heading"
                              >
                                 Flyout2 
                              </p>
                              <ul
                                aria-labelledby="Flyout2-heading"
                                class="mt-6 space-y-6 sm:mt-4 sm:space-y-4"
                                role="list"
                              >
                                
                              </ul>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  
                </div>
                
              </div>
              <div
                class="menu-item flex h-full space-x-8"
              >
                <a
                  class="menu-item-button flex items-center text-sm font-medium text-gray-700 hover:text-gray-800"
                  href="/route1"
                >
                   Route1 
                </a>
              </div>
              <div
                class="menu-item flex h-full space-x-8"
              >
                <a
                  class="menu-item-button flex items-center text-sm font-medium text-gray-700 hover:text-gray-800"
                  href="/route2"
                >
                   Route2 
                </a>
              </div>
              
            </div>
          </div>
          <div
            class="ml-auto flex items-center"
          >
            <lib-user-navigation
              class="hidden lg:flex lg:flex-1 lg:items-center lg:justify-end lg:space-x-6"
            />
            <lib-product-search />
            <lib-cart-icon />
          </div>
        </div>
      </div>
    </nav>
  </header>
</div>
`;

exports[`NavigationComponent snapshots should match snapshot with mobile menu open 1`] = `
<div
  class="bg-white"
  id="root7"
>
  <div
    aria-modal="true"
    class="relative z-40 lg:hidden ng-trigger ng-trigger-animateBackdrop ng-animating"
    role="dialog"
  >
    <div
      aria-hidden="true"
      class="fixed inset-0 bg-black bg-opacity-25"
    />
  </div>
  <div
    class="absolute h-screen z-40 flex w-full max-w-xs flex-col overflow-y-auto bg-white pb-12 shadow-xl ng-trigger ng-trigger-animateSlideOver ng-animating"
  >
    <div
      class="sticky z-20 top-0 flex px-4 pb-2 pt-5"
    >
      <button
        class="relative opacity-90 -m-2 inline-flex items-center justify-center rounded-md p-2 text-gray-400 bg-white"
        type="button"
      >
        <span
          class="absolute -inset-0.5"
        />
        <span
          class="sr-only"
        >
          Close menu
        </span>
        <svg
          aria-hidden="true"
          class="h-6 w-6"
          fill="none"
          stroke="currentColor"
          stroke-width="1.5"
          viewBox="0 0 24 24"
        >
          <path
            d="M6 18L18 6M6 6l12 12"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
      </button>
    </div>
    <div
      class="mt-2"
    >
      <div
        class="space-y-10 px-4 pb-8"
      >
        <div
          class="grid grid-cols-2 gap-x-4"
        >
          <div
            class="group relative text-sm"
          >
            <div
              class="aspect-h-1 aspect-w-1 overflow-hidden rounded-lg bg-gray-100 group-hover:opacity-75"
            >
              <lib-image-placeholder
                text="N"
              />
            </div>
            <a
              class="mt-6 block font-medium text-gray-900"
            >
              <span
                aria-hidden="true"
                class="absolute inset-0 z-10"
              />
               New Items 
            </a>
            <p
              aria-hidden="true"
              class="mt-1"
            >
              Shop now
            </p>
          </div>
          <div
            class="group relative text-sm"
          >
            <div
              class="aspect-h-1 aspect-w-1 overflow-hidden rounded-lg bg-gray-100 group-hover:opacity-75"
            >
              <lib-image-placeholder
                text="D"
              />
            </div>
            <a
              class="mt-6 block font-medium text-gray-900"
            >
              <span
                aria-hidden="true"
                class="absolute inset-0 z-10"
              />
               Deals 
            </a>
            <p
              aria-hidden="true"
              class="mt-1"
            >
              Shop now
            </p>
          </div>
        </div>
        <div>
          <p
            class="font-medium text-gray-900"
            id="Flyout1-heading-mobile"
            style=""
          >
            Flyout1
          </p>
          <ul
            aria-labelledby="Flyout1-heading-mobile"
            class="mt-6 mb-10 last:mb-0 flex flex-col space-y-6"
            role="list"
            style=""
          >
            <li
              class="flow-root"
            >
              <a
                class="-m-2 block p-2 text-gray-500"
              >
                Sub1
              </a>
            </li>
            
            <li
              class="flow-root"
            >
              <a
                class="-m-2 block p-2 text-gray-500"
              >
                Browse All
              </a>
            </li>
          </ul>
          <p
            class="font-medium text-gray-900"
            id="Flyout2-heading-mobile"
            style=""
          >
            Flyout2
          </p>
          <ul
            aria-labelledby="Flyout2-heading-mobile"
            class="mt-6 mb-10 last:mb-0 flex flex-col space-y-6"
            role="list"
            style=""
          >
            
            <li
              class="flow-root"
            >
              <a
                class="-m-2 block p-2 text-gray-500"
              >
                Browse All
              </a>
            </li>
          </ul>
          
        </div>
      </div>
    </div>
    <div
      class="space-y-6 border-t border-gray-200 px-4 py-6"
    >
      <div
        class="flow-root"
        style=""
      >
        <a
          class="-m-2 block p-2 font-medium text-gray-900"
          href="/route1"
        >
           Route1 
        </a>
      </div>
      <div
        class="flow-root"
        style=""
      >
        <a
          class="-m-2 block p-2 font-medium text-gray-900"
          href="/route2"
        >
           Route2 
        </a>
      </div>
      
    </div>
    <lib-user-navigation
      class="lg:hidden space-y-6 border-t border-gray-200 px-4 py-6"
      issmallscreen=""
    />
  </div>
  
  <header
    class="relative bg-white"
  >
    <nav
      aria-label="Top"
      class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8"
    >
      <div
        class="border-b border-gray-200"
      >
        <div
          class="flex h-16 items-center"
        >
          <button
            class="relative rounded-md bg-white p-2 text-gray-400 lg:hidden"
            type="button"
          >
            <span
              class="absolute -inset-0.5"
            />
            <span
              class="sr-only"
            >
              Open menu
            </span>
            <svg
              aria-hidden="true"
              class="h-6 w-6"
              fill="none"
              stroke="currentColor"
              stroke-width="1.5"
              viewBox="0 0 24 24"
            >
              <path
                d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </button>
          <div
            class="ml-4 flex lg:ml-0 h-8 w-8 relative"
          >
            <a
              href="/"
              routerlink="/"
            >
              <span
                class="sr-only"
              >
                Demo Shop
              </span>
              <img
                alt="Demo shop logo"
                class="object-contain"
                fetchpriority="auto"
                fill=""
                loading="lazy"
                ng-img="true"
                ngsrc="icons/demo-shop.png"
                sizes="100vw"
                src="icons/demo-shop.png"
                style="position: absolute; width: 100%; height: 100%; inset: 0;"
              />
            </a>
          </div>
          <div
            class="hidden lg:ml-8 lg:block lg:self-stretch"
          >
            <div
              class="flex h-full space-x-8"
            >
              <div
                class="flex space-x-8"
              >
                <div
                  class="menu-item flex h-full"
                >
                  <div
                    class="relative flex"
                  >
                    <button
                      aria-expanded="false"
                      class="menu-item-button relative z-10 -mb-px flex items-center border-b-2 border-transparent pt-px text-sm font-medium text-gray-700 transition-colors duration-200 ease-out hover:text-gray-800"
                      routerlink="products"
                      tabindex="0"
                      type="button"
                    >
                       Flyout1 
                    </button>
                  </div>
                  
                </div>
                <div
                  class="menu-item flex h-full"
                >
                  <div
                    class="relative flex"
                  >
                    <button
                      aria-expanded="false"
                      class="menu-item-button relative z-10 -mb-px flex items-center border-b-2 border-transparent pt-px text-sm font-medium text-gray-700 transition-colors duration-200 ease-out hover:text-gray-800"
                      routerlink="products"
                      tabindex="0"
                      type="button"
                    >
                       Flyout2 
                    </button>
                  </div>
                  
                </div>
                
              </div>
              <div
                class="menu-item flex h-full space-x-8"
              >
                <a
                  class="menu-item-button flex items-center text-sm font-medium text-gray-700 hover:text-gray-800"
                  href="/route1"
                >
                   Route1 
                </a>
              </div>
              <div
                class="menu-item flex h-full space-x-8"
              >
                <a
                  class="menu-item-button flex items-center text-sm font-medium text-gray-700 hover:text-gray-800"
                  href="/route2"
                >
                   Route2 
                </a>
              </div>
              
            </div>
          </div>
          <div
            class="ml-auto flex items-center"
          >
            <lib-user-navigation
              class="hidden lg:flex lg:flex-1 lg:items-center lg:justify-end lg:space-x-6"
            />
            <lib-product-search />
            <lib-cart-icon />
          </div>
        </div>
      </div>
    </nav>
  </header>
</div>
`;
